[package]
name = "widgets"
version = "0.1.0"
authors = ["jaap aarts <jaap.aarts1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "image"]}
